--- a/images/all_tfidf_vect_topics.html
+++ b/images/all_tfidf_vect_topics.html
@@ -1,7 +1,8 @@
 
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.css">
 
-
+<h1>3 Topics on Full Corpus (Using Term Frequency - Inverse Term Frequency (TF-IDF))</h1>
+<p>The Full Corpus includes ~36000 flash cards, evenly split, drawn from Data Science, History, and Biology decks</p>
 <div id="ldavis_el395941121577877449554430796"></div>
 <script type="text/javascript">
 
