--- a/images/datascience_count_vect_topics.html
+++ b/images/datascience_count_vect_topics.html
@@ -1,7 +1,8 @@
 
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.css">
 
-
+<h1>5 Topics on Data Science Flash Cards (Using Term Frequency (TF) Counts)</h1>
+<p>The Data Science data has ~12000 rows</p>
 <div id="ldavis_el395941122398555605243117905"></div>
 <script type="text/javascript">
 
