--- a/images/datascience_tfidf_vect_topics.html
+++ b/images/datascience_tfidf_vect_topics.html
@@ -1,6 +1,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.css">
-
+<h1>5 Topics on Data Science Flash Cards (Using Term Frequency - Inverse Term Frequency (TF-IDF))</h1>
+<p>The Data Science data has ~12000 rows</p>
 
 <div id="ldavis_el395941122740528243491834887"></div>
 <script type="text/javascript">
